--- a/src/Backend/BrazilianAddresses.Api/BrazilianAddresses.Api.csproj
+++ b/src/Backend/BrazilianAddresses.Api/BrazilianAddresses.Api.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\..\Shared\BrazilianAddresses.Communication\BrazilianAddresses.Communication.csproj" />
     <ProjectReference Include="..\..\Shared\BrazilianAddresses.Exceptions\BrazilianAddresses.Exceptions.csproj" />
     <ProjectReference Include="..\BrazilianAddresses.Application\BrazilianAddresses.Application.csproj" />
+    <ProjectReference Include="..\BrazilianAddresses.Infrastructure\BrazilianAddresses.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
