--- a/src/Backend/BrazilianAddresses.Infrastructure/BrazilianAddresses.Infrastructure.csproj
+++ b/src/Backend/BrazilianAddresses.Infrastructure/BrazilianAddresses.Infrastructure.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.11" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BrazilianAddresses.Domain\BrazilianAddresses.Domain.csproj" />
   </ItemGroup>
 
