--- a/src/Backend/BrazilianAddresses.Infrastructure/BrazilianAddresses.Infrastructure.csproj
+++ b/src/Backend/BrazilianAddresses.Infrastructure/BrazilianAddresses.Infrastructure.csproj
@@ -8,6 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.11" />
+    <PackageReference Include="FluentMigrator" Version="3.3.2" />
+    <PackageReference Include="FluentMigrator.Runner" Version="3.3.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
