--- a/src/Shared/BrazilianAddresses.Exceptions/BrazilianAddresses.Exceptions.csproj
+++ b/src/Shared/BrazilianAddresses.Exceptions/BrazilianAddresses.Exceptions.csproj
@@ -12,7 +12,7 @@
 
   <ItemGroup>
     <None Include="ResourcesMessage\APIMSG.pt.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>APIMSG.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
@@ -27,7 +27,7 @@
 
   <ItemGroup>
     <EmbeddedResource Update="ResourcesMessage\APIMSG.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>APIMSG.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
