--- a/src/Backend/BrazilianAddresses.Api/Properties/launchSettings.json
+++ b/src/Backend/BrazilianAddresses.Api/Properties/launchSettings.json
@@ -9,20 +9,10 @@
     }
   },
   "profiles": {
-    "http": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5290",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "BrazilianAddresses": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7290;http://localhost:5290",
       "environmentVariables": {
