refactor: foi melhorado a lógica de paginação, o json de entrada e adicionado novas mensagens

--- a/src/Shared/BrazilianAddresses.Communication/BrazilianAddresses.Communication.csproj
+++ b/src/Shared/BrazilianAddresses.Communication/BrazilianAddresses.Communication.csproj
@@ -6,4 +6,8 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BrazilianAddresses.Exceptions\BrazilianAddresses.Exceptions.csproj" />
+  </ItemGroup>
+
 </Project>
