--- a/src/Shared/BrazilianAddresses.Communication/BrazilianAddresses.Communication.csproj
+++ b/src/Shared/BrazilianAddresses.Communication/BrazilianAddresses.Communication.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Backend\BrazilianAddresses.Domain\BrazilianAddresses.Domain.csproj" />
     <ProjectReference Include="..\BrazilianAddresses.Exceptions\BrazilianAddresses.Exceptions.csproj" />
   </ItemGroup>
 
