--- a/src/Backend/BrazilianAddresses.Api/appsettings.Development.json
+++ b/src/Backend/BrazilianAddresses.Api/appsettings.Development.json
@@ -7,5 +7,9 @@
   },
   "ConnectionStrings": {
     "Connection": "Server=server-name;Initial Catalog=challenge-addresses;Persist Security Info=False;User ID=user-name;Password=user-password;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=300;"
+  },
+  "Jwt": {
+    "JwtExpirationTime": 2,
+    "JwtSecurityPassword": "ZDN0eGhnWG40NlZwNWUyVHRmODdkckRrYzlFVzhXZHJvU1M="
   }
 }
