TASK12 - Adiciona login controller - Adiciona endpoint Login - Adiciona addscoped para iLoginUser - Ajusta configuração token

--- a/src/Backend/BrazilianAddresses.Api/appsettings.Development.json
+++ b/src/Backend/BrazilianAddresses.Api/appsettings.Development.json
@@ -8,8 +8,10 @@
   "ConnectionStrings": {
     "Connection": "Server=server-name;Initial Catalog=challenge-addresses;Persist Security Info=False;User ID=user-name;Password=user-password;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=300;"
   },
-  "Jwt": {
-    "JwtExpirationTime": 2,
-    "JwtSecurityPassword": "ZDN0eGhnWG40NlZwNWUyVHRmODdkckRrYzlFVzhXZHJvU1M="
+  "Configuration": {
+    "Jwt": {
+      "JwtExpirationTime": 2,
+      "JwtSecurityPassword": "ZDN0eGhnWG40NlZwNWUyVHRmODdkckRrYzlFVzhXZHJvU1M="
+    }
   }
 }
